# wottu

./: .gitignore  README.md  meson.build
docs/: grammar.ebnf
include/wottu/: wottu.h
src/: wottu.c
